cluster/apps/podsync/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: podsync
  name: podsync-svc
  namespace: podsync
#  annotations:
#    dev.okteto.com/auto-ingress: "true"
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: podsync
