cluster/apps/podsync/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: podsync
  labels:
    app: podsync
  name: podsync-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    external-dns/is-public: true
    external-dns.alpha.kubernetes.io/target: "${SECRET_DOMAIN_TARGET}"
spec:
  tls:
    - secretName: podsync-eighty-three-me-tls
      hosts:
        - podsync.${SECRET_DOMAIN}
  rules:
    - host: podsync.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podsync-svc
                port:
                  number: 8080
